Mon Nov 30 11:15:09 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- backported fix for row number returned for cursors

Fri Nov 27 19:38:53 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: conversions returns correctly no unicode

Fri Nov 27 19:36:40 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: backported fix for SQLGetData

Fri Nov 27 19:34:26 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_util.c: backported fix for SQL_GUID len

Tue Nov 17 14:50:03 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac:
	- use pkg-config instead of libgnutls-config if possible

Fri Oct 16 10:03:01 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c: Fix dbwritetext with text == NULL

Tue Sep 29 11:15:13 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/convert.c: fix float to money precision during conversion

Mon Sep 28 16:12:43 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: Fix SSL connection under mssql2k

Thu Sep  3 11:22:26 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: fix NTLM2 check

Thu Jun 18 09:38:30 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/iconv.c: fix iconv portability problem

Fri Apr  3 11:39:24 CEST 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c:
	- backported "asa database" option to specify ASA database

Mon Mar  2 08:59:31 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/msvc6/libTDS.dsp: add needed files

Thu Feb 26 19:33:37 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/challenge.c: backported fix for Windows compiler

Mon Feb 23 17:10:50 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: applied patch by Amir Shamsuddin to fix core

Wed Nov 05 15:55:05 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>