@@ -1,3 +1,8 @@
+Mon Dec  7 17:07:12 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c src/odbc/unittests/getdata.c:
+	- fix core converting '' text to SQL_C_BINARY reported by Michal
+	  Seliga
+
 Mon Nov 30 11:15:09 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/odbc/odbc.c:
 	- backported fix for row number returned for cursors
@@ -274,4 +279,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2454.2.69 2009-11-30 10:17:16 freddy77 Exp $
+$Id: ChangeLog,v 1.2454.2.70 2009-12-07 16:07:31 freddy77 Exp $
